Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43549

Qt Webkit not building with -no-opengl

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.1
    • 5.4.0
    • WebKit
    • None
    • 4ecb913768ff0806c6efdff4567ef5907f597e4a

    Description

      All is OK with 5.3.2. Problem is with 5.4.0

      I run:

      %QT_SRC_MY%\configure -prefix %QT_DST_MY% -shared -debug-and-release -opensource -confirm-license -platform win32-g++ -target xp -c++11 -no-openssl -icu -no-opengl -no-angle -qt-sql-sqlite -qt-zlib -qt-pcre -qt-libpng -qt-libjpeg -qt-freetype -qt-harfbuzz -no-dbus -no-audio-backend -no-wmf-backend -no-qml-debug -no-directwrite -no-direct2d -no-native-gestures -no-compile-examples -nomake tests -nomake examples

      mingw32-make -j 8

      Error:

      In file included from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\platform\graphics/ImageBufferData.h:31:0,
      from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\platform\graphics/ImageBuffer.h:41,
      from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\platform\graphics/GeneratorGeneratedImage.h:32,
      from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\css/CSSImageGeneratorValue.h:30,
      from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\rendering\style/StylePendingImage.h:30,
      from E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\css\CSSImageSetValue.cpp:40:
      E:\Dev\QtWork\orig\qt5\qtwebkit\Source\WebCore\platform\graphics\qt/ImageBufferDataQt.h:64:37: error: 'QOpenGLContext' has not been declared
      ImageBufferData(const IntSize&, QOpenGLContext*);
      ^

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            nikitafeodonit NikitaFeodonit
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes