Fix build without OpenGL

The accelerated 2D canvas feature broke building without OpenGL due to
missing feature checks.

Task-number: QTBUG-43549
Change-Id: I7e62751d5237e1c600bc784539c70db50bccfa22
Reviewed-by: Ashish Kulkarni <kulkarni.ashish@gmail.com>
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>