Tools/QtTestBrowser/launcherwindow.cpp
@@ -177,9 +177,9 @@ void LauncherWindow::initializeView()
 #ifndef QT_NO_OPENGL
         if (!m_windowOptions.useQOpenGLWidgetViewport)
             toggleQGLWidgetViewport(m_windowOptions.useQGLWidgetViewport);
-#endif
         if (!m_windowOptions.useQGLWidgetViewport)
             toggleQOpenGLWidgetViewport(m_windowOptions.useQOpenGLWidgetViewport);
+#endif
         view->setPage(page());
 
         connect(view, SIGNAL(currentFPSUpdated(int)), this, SLOT(updateFPS(int)));
@@ -407,13 +407,13 @@ void LauncherWindow::createChrome()
     toggleQGLWidgetViewport->setChecked(m_windowOptions.useQGLWidgetViewport);
     toggleQGLWidgetViewport->setEnabled(isGraphicsBased());
     toggleQGLWidgetViewport->connect(toggleGraphicsView, SIGNAL(toggled(bool)), SLOT(setEnabled(bool)));
-#endif
 #if QT_VERSION >= QT_VERSION_CHECK(5, 4, 0)
     QAction* toggleQOpenGLWidgetViewport = graphicsViewMenu->addAction("Toggle use of QOpenGLWidget Viewport", this, SLOT(toggleQOpenGLWidgetViewport(bool)));
     toggleQOpenGLWidgetViewport->setCheckable(true);
     toggleQOpenGLWidgetViewport->setChecked(m_windowOptions.useQOpenGLWidgetViewport);
     toggleQOpenGLWidgetViewport->setEnabled(isGraphicsBased());
     toggleQOpenGLWidgetViewport->connect(toggleGraphicsView, SIGNAL(toggled(bool)), SLOT(setEnabled(bool)));
+#endif
 #endif
 
     QMenu* viewportUpdateMenu = graphicsViewMenu->addMenu("Change Viewport Update Mode");
@@ -802,9 +802,9 @@ void LauncherWindow::screenshot()
 #ifndef QT_NO_OPENGL
     if (!m_windowOptions.useQOpenGLWidgetViewport)
         toggleQGLWidgetViewport(m_windowOptions.useQGLWidgetViewport);
-#endif
     if (!m_windowOptions.useQGLWidgetViewport)
         toggleQOpenGLWidgetViewport(m_windowOptions.useQOpenGLWidgetViewport);
+#endif
 }
 
 void LauncherWindow::setEditable(bool on)
@@ -997,7 +997,6 @@ void LauncherWindow::toggleQGLWidgetViewport(bool enable)
     WebViewGraphicsBased* view = static_cast<WebViewGraphicsBased*>(m_view);
     view->setViewport(enable ? new QGLWidget() : 0);
 }
-#endif
 
 void LauncherWindow::toggleQOpenGLWidgetViewport(bool enable)
 {
@@ -1013,6 +1012,7 @@ void LauncherWindow::toggleQOpenGLWidgetViewport(bool enable)
     view->setViewport(enable ? new QOpenGLWidget() : 0);
 #endif
 }
+#endif
 
 void LauncherWindow::changeViewportUpdateMode(int mode)
 {
